[package]
name = "Ox-C2"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"
bytes = "1.0.1"
actix-web = "3"
md5 = "0.7.0"
prost = "0.6"
prost-types = "0.6"
actix-protobuf = "0.6.0"
env_logger = "0.8.3"
rustyline = "7.1.0"
futures = "0.3.12"
async-std = { version = "1.2.0", features = ["attributes"] }

[build-dependencies]
prost-build = { version = "0.6" }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"